bridge/base/0-catastroanimales-namespace.yaml
#! 0-catastroanimales-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: catastroanimales
    labels:
        com.docker.compose.project: catastroanimales
