bridge/base/db-deployment.yaml
#! db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
    namespace: catastroanimales
    labels:
        com.docker.compose.project: catastroanimales
        com.docker.compose.service: db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: catastroanimales
            com.docker.compose.service: db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: catastroanimales
                com.docker.compose.service: db
                com.docker.compose.network.catastro-net: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: db
                  image: mysql:8.0
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: db-33060
                      containerPort: 33060
                    - name: db-3306
                      containerPort: 3306
                  volumeMounts:
                    - name: var-lib-mysql
                      mountPath: /var/lib/mysql
            volumes:
                - name: var-lib-mysql
                  persistentVolumeClaim:
                    claimName: db-mysql-data
