bridge/base/api-express-expose.yaml
#! api-express-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-express
    namespace: catastroanimales
    labels:
        com.docker.compose.project: catastroanimales
        com.docker.compose.service: api-express
spec:
    selector:
        com.docker.compose.project: catastroanimales
        com.docker.compose.service: api-express
    ports:
        - name: api-expres-3000
          port: 3000
          targetPort: api-expres-3000
