bridge/base/db-service.yaml
#! db-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: db-published
    namespace: catastroanimales
    labels:
        com.docker.compose.project: catastroanimales
        com.docker.compose.service: db
spec:
    selector:
        com.docker.compose.project: catastroanimales
        com.docker.compose.service: db
    ports:
        - name: db-3307
          port: 3307
          protocol: TCP
          targetPort: db-3306

# check if there is at least one published port
