bridge/base/catastro-net-network-policy.yaml
#! catastro-net-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: catastro-net-network-policy
    namespace: catastroanimales
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.catastro-net: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.catastro-net: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.catastro-net: "true"
